# rag_agent

./: .env.example  pyproject.toml
src/agents/: agent.py  rag_agent.py
src/tools/: create_corpus.py
src/utils/: config.cfg  config.py
