[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.47",
    "google-adk>=1.31.1",
    "google-cloud-aiplatform>=1.148.1",
    "google-cloud-storage>=3.10.1",
    "google-genai>=1.73.1",
]
